--- a/services/json-server/package.json
+++ b/services/json-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mernmono/json-server",
+  "name": "@mesnmono/json-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
