--- a/services/server/package.json
+++ b/services/server/package.json
@@ -15,9 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "chalk": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "logger": "^0.0.1",
     "mongodb": "^4.8.0",
     "mongoose": "^6.4.5"
   },
